fix(rma-frontend): silent refresh token
add silent-refresh.html page to assets in angular.json
error callback for silent refresh observable
if silent refresh fails redirect to implicit flow

--- a/packages/rma-frontend/angular.json
+++ b/packages/rma-frontend/angular.json
@@ -29,6 +29,11 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
+              },
+              {
+                "glob": "silent-refresh.html",
+                "input": "src/",
+                "output": "/"
               }
             ],
             "styles": [
@@ -110,6 +115,11 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "/assets"
+              },
+              {
+                "glob": "silent-refresh.html",
+                "input": "src/",
+                "output": "/"
               }
             ]
           },
