fix(helm-chart): add timestamp for rolling updates

--- a/helm-chart/rma-portal/templates/deployment.yaml
+++ b/helm-chart/rma-portal/templates/deployment.yaml
@@ -13,6 +13,8 @@ spec:
       {{- include "rma-portal.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      annotations:
+        timestamp: "{{ date "20060102150405" .Release.Time }}"
       labels:
         {{- include "rma-portal.selectorLabels" . | nindent 8 }}
     spec:
