--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -15,9 +15,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.2.8",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.8",
     "@angular/core": "^8.2.8",
     "@angular/forms": "^8.2.8",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.8",
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
@@ -26,6 +29,7 @@
     "@ionic-native/status-bar": "^5.14.0",
     "@ionic/angular": "^4.10.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.2"
