--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -16,7 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.8",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.8",
     "@angular/core": "^8.2.8",
     "@angular/forms": "^8.2.8",
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.14.0",
     "@ionic-native/status-bar": "^5.14.0",
     "@ionic/angular": "^4.10.0",
+    "@ncstate/sat-popover": "^4.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.3",
