--- a/packages/rma-server/package.json
+++ b/packages/rma-server/package.json
@@ -35,6 +35,7 @@
     "cron": "^1.7.2",
     "geteventstore-promise": "^3.2.0",
     "joi": "^14.3.1",
+    "luxon": "^1.21.3",
     "mongodb": "^3.3.5",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^3.0.0",
