--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -31,6 +31,7 @@
     "@ncstate/sat-popover": "^4.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "localforage": "^1.7.3",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.2"
