--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^4.10.0",
     "@ncstate/sat-popover": "^4.0.0",
     "core-js": "^2.5.4",
+    "luxon": "^1.21.3",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
     "rxjs": "^6.5.3",
