--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -17,51 +17,51 @@
   "dependencies": {
     "@angular/animations": "^8.2.8",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.8",
-    "@angular/core": "^8.2.8",
-    "@angular/forms": "^8.2.8",
+    "@angular/common": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.8",
-    "@angular/platform-browser-dynamic": "^8.2.8",
-    "@angular/router": "^8.2.8",
-    "@ionic-native/core": "^5.14.0",
-    "@ionic-native/splash-screen": "^5.14.0",
-    "@ionic-native/status-bar": "^5.14.0",
-    "@ionic/angular": "^4.10.0",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@ionic-native/core": "^5.20.0",
+    "@ionic-native/splash-screen": "^5.20.0",
+    "@ionic-native/status-bar": "^5.20.0",
+    "@ionic/angular": "^4.11.10",
     "@ncstate/sat-popover": "^4.0.0",
     "core-js": "^2.5.4",
-    "luxon": "^1.21.3",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
-    "rxjs": "^6.5.3",
+    "luxon": "^1.22.0",
+    "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.6",
-    "@angular-devkit/build-angular": "^0.803.6",
-    "@angular-devkit/core": "^8.3.6",
-    "@angular-devkit/schematics": "^8.3.6",
-    "@angular/cli": "^8.3.6",
-    "@angular/compiler": "^8.2.8",
-    "@angular/compiler-cli": "^8.2.8",
-    "@angular/language-service": "^8.2.8",
-    "@ionic/angular-toolkit": "~2.0.0",
-    "@types/jasmine": "^3.4.1",
-    "@types/jasminewd2": "^2.0.7",
-    "@types/node": "^12.7.8",
-    "codelyzer": "^5.1.2",
+    "@angular-devkit/architect": "^0.803.23",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/core": "^8.3.23",
+    "@angular-devkit/schematics": "^8.3.23",
+    "@angular/cli": "^8.3.23",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@ionic/angular-toolkit": "^2.1.2",
+    "@types/jasmine": "^3.5.2",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^13.5.2",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.3.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "prettier": "^1.18.2",
-    "protractor": "^5.4.2",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "prettier": "^1.19.1",
+    "protractor": "^5.4.3",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
     "typescript": "~3.4.3"
   },
   "description": "An Ionic project"
