--- a/packages/rma-server/package.json
+++ b/packages/rma-server/package.json
@@ -8,9 +8,9 @@
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier -c \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "start": "nest start",
     "start:dev": "concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
-    "start:debug": "nodemon --config nodemon-debug.json",
+    "start:debug": "nest start --debug --watch",
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -45,6 +45,7 @@
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
+    "@nestjs/cli": "^6.14.1",
     "@nestjs/testing": "^6.11.4",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.1",
@@ -52,7 +53,6 @@
     "@types/supertest": "^2.0.8",
     "concurrently": "^5.1.0",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^25.1.0",
