--- a/packages/rma-server/package.json
+++ b/packages/rma-server/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "node dist/main.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint": "eslint '{tests,src}/**/*.ts'",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -51,14 +51,18 @@
     "@types/jest": "^25.1.1",
     "@types/node": "^13.5.2",
     "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "concurrently": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jsdoc": "^21.0.0",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^25.1.0",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^6.0.0",
     "typescript": "^3.7.5",
     "wait-on": "^4.0.0"
   },
