--- a/packages/rma-mobile/package.json
+++ b/packages/rma-mobile/package.json
@@ -8,7 +8,7 @@
     "start": "ng run app:serve --host=localhost --port=8100",
     "build": "ng build",
     "test": "ng test",
-    "lint": "tslint -c tslint.json './src/**/*.ts' './e2e/**/*.ts'",
+    "lint": "eslint '{e2e,src}/**/*.ts'",
     "format": "prettier --write './**/*.ts' './**/*.spec.ts'",
     "format:check": "prettier -c './**/*.ts' './**/*.spec.ts'",
     "e2e": "ng e2e"
@@ -55,6 +55,8 @@
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.17",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "codelyzer": "^5.2.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -62,6 +64,9 @@
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jsdoc": "^21.0.0",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -72,7 +77,6 @@
     "prettier": "^1.19.1",
     "protractor": "^5.4.2",
     "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
     "typescript": "^3.4.5"
   },
   "description": "Mobile app for Excel RMA",
