--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "luxon": "^1.22.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
