--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^4.11.10",
     "@ncstate/sat-popover": "^4.0.0",
     "core-js": "^2.5.4",
+    "csvjson-csv2json": "^5.0.6",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
