--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -15,22 +15,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.8",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@ionic-native/core": "^5.20.0",
-    "@ionic-native/splash-screen": "^5.20.0",
-    "@ionic-native/status-bar": "^5.20.0",
-    "@ionic/angular": "^4.11.10",
+    "@angular/animations": "^9.0.0",
+    "@angular/cdk": "^9.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
+    "@ionic-native/core": "^5.21.5",
+    "@ionic-native/splash-screen": "^5.21.5",
+    "@ionic-native/status-bar": "^5.21.5",
+    "@ionic/angular": "^5.0.0",
     "@ncstate/sat-popover": "^4.0.0",
-    "core-js": "^2.5.4",
     "csvjson-csv2json": "^5.0.6",
+    "core-js": "^3.6.4",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
@@ -40,20 +40,20 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.23",
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular-devkit/core": "^8.3.23",
-    "@angular-devkit/schematics": "^8.3.23",
-    "@angular/cli": "^8.3.23",
-    "@angular/compiler": "^8.2.14",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/architect": "^0.900.1",
+    "@angular-devkit/build-angular": "^0.900.1",
+    "@angular-devkit/core": "^9.0.1",
+    "@angular-devkit/schematics": "^9.0.1",
+    "@angular/cli": "^9.0.1",
+    "@angular/compiler": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
     "@ionic/angular-toolkit": "^2.1.2",
-    "@types/jasmine": "^3.5.2",
+    "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.5.2",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
+    "@types/node": "^13.7.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "codelyzer": "^5.2.1",
     "eslint": "^6.8.0",
     "eslint-plugin-jsdoc": "^21.0.0",
@@ -63,12 +63,12 @@
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "^3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "prettier": "^1.19.1",
     "protractor": "^5.4.3",
     "ts-node": "^8.6.2",
-    "typescript": "~3.4.3"
+    "typescript": "^3.7.5"
   },
   "description": "An Ionic project"
 }
