--- a/packages/rma-server/Dockerfile
+++ b/packages/rma-server/Dockerfile
@@ -7,20 +7,14 @@ RUN cd rma-server \
     && npm run build \
     && rm -fr node_modules \
     && npm install --only=production
-FROM node:slim
-# Install mysql Dockerize
-ENV DOCKERIZE_VERSION v0.6.1
 
-RUN apt-get update \
-    && apt-get install -y wget \
-    && apt-get clean \
-    && wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+FROM node:slim
+
+# Install packages
+RUN apt-get update && apt-get install -y gettext-base && apt-get clean
 
 # Setup docker-entrypoint
-COPY docker/docker-entrypoint.sh usr/local/bin/docker-entrypoint.sh
-RUN ln -s usr/local/bin/docker-entrypoint.sh / # backwards compat
+COPY docker/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 
 # Add non root user
 RUN useradd -ms /bin/bash craft
