--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -5,8 +5,8 @@
   "homepage": "https://castlecraft.in",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host \"rma.localhost\" --port 4700 --proxy-config proxy.config.json",
-    "build": "ng build",
+    "start": "ng serve --host \"rma.localhost\" --port 4700 --proxy-config proxy.config.json --extra-webpack-config webpack.partial.js",
+    "build": "ng build --extra-webpack-config webpack.partial.js",
     "test": "ng test",
     "lint": "eslint '{e2e,src}/**/*.ts'",
     "format": "prettier --write './**/*.ts' './**/*.spec.ts'",
@@ -29,13 +29,14 @@
     "@ionic-native/status-bar": "^5.21.5",
     "@ionic/angular": "^5.0.0",
     "@ncstate/sat-popover": "^4.0.0",
-    "csvjson-csv2json": "^5.0.6",
     "core-js": "^3.6.4",
+    "csvjson-csv2json": "^5.0.6",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "luxon": "^1.22.0",
     "rxjs": "^6.5.4",
+    "sequential-ids": "0.0.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.2"
   },
@@ -65,6 +66,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "^3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "ngx-build-plus": "^9.0.6",
     "prettier": "^1.19.1",
     "protractor": "^5.4.3",
     "ts-node": "^8.6.2",
