fix(ci): Fix test.Now it also checks for build errors

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ test_rma_frontend:
     - npm run test
     # Test backend e2e
     - npm run e2e
+    - npm run build -- --prod
   tags:
     - docker
 
