--- a/packages/rma-server/package.json
+++ b/packages/rma-server/package.json
@@ -30,9 +30,9 @@
     "@nestjs/swagger": "^4.2.7",
     "@nestjs/terminus": "^6.5.6",
     "@nestjs/typeorm": "^6.3.1",
+    "agenda": "^3.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
-    "cron": "^1.8.2",
     "geteventstore-promise": "^3.2.0",
     "joi": "^14.3.1",
     "luxon": "^1.22.0",
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@nestjs/cli": "^6.14.2",
     "@nestjs/testing": "^6.11.6",
+    "@types/agenda": "^2.0.6",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.1",
