--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/core": "^9.0.0",
     "@angular/forms": "^9.0.0",
     "@angular/material": "^9.0.0",
+    "@angular/material-moment-adapter": "^9.2.0",
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
@@ -29,12 +30,13 @@
     "@ionic-native/status-bar": "^5.21.5",
     "@ionic/angular": "^5.0.0",
     "@ncstate/sat-popover": "^4.0.0",
-    "csvjson-csv2json": "^5.0.6",
     "core-js": "^3.6.4",
+    "csvjson-csv2json": "^5.0.6",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "luxon": "^1.22.0",
+    "moment": "^2.24.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.2"
