--- a/packages/rma-frontend/package.json
+++ b/packages/rma-frontend/package.json
@@ -15,61 +15,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^9.0.0",
-    "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "@angular/forms": "^9.0.0",
-    "@angular/material": "^9.0.0",
-    "@angular/material-moment-adapter": "^9.2.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/platform-browser-dynamic": "^9.0.0",
-    "@angular/router": "^9.0.0",
-    "@ionic-native/core": "^5.21.5",
-    "@ionic-native/splash-screen": "^5.21.5",
-    "@ionic-native/status-bar": "^5.21.5",
-    "@ionic/angular": "^5.0.0",
+    "@angular/animations": "^9.1.6",
+    "@angular/cdk": "^9.2.3",
+    "@angular/common": "^9.1.6",
+    "@angular/core": "^9.1.6",
+    "@angular/forms": "^9.1.6",
+    "@angular/material": "^9.2.3",
+    "@angular/material-moment-adapter": "^9.2.3",
+    "@angular/platform-browser": "^9.1.6",
+    "@angular/platform-browser-dynamic": "^9.1.6",
+    "@angular/router": "^9.1.6",
+    "@ionic-native/core": "^5.25.0",
+    "@ionic-native/splash-screen": "^5.25.0",
+    "@ionic-native/status-bar": "^5.25.0",
+    "@ionic/angular": "^5.1.0",
     "@ncstate/sat-popover": "^4.0.0",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "csvjson-csv2json": "^5.0.6",
     "hammerjs": "^2.0.8",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
-    "luxon": "^1.22.0",
-    "moment": "^2.24.0",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.10.2"
+    "luxon": "^1.24.1",
+    "moment": "^2.25.3",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.12.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.900.1",
-    "@angular-devkit/build-angular": "^0.900.1",
-    "@angular-devkit/core": "^9.0.1",
-    "@angular-devkit/schematics": "^9.0.1",
-    "@angular/cli": "^9.0.1",
-    "@angular/compiler": "^9.0.0",
-    "@angular/compiler-cli": "^9.0.0",
-    "@angular/language-service": "^9.0.0",
-    "@ionic/angular-toolkit": "^2.1.2",
-    "@types/jasmine": "^3.5.3",
+    "@angular-devkit/architect": "^0.901.5",
+    "@angular-devkit/build-angular": "^0.901.5",
+    "@angular-devkit/core": "^9.1.5",
+    "@angular-devkit/schematics": "^9.1.5",
+    "@angular/cli": "^9.1.5",
+    "@angular/compiler": "^9.1.6",
+    "@angular/compiler-cli": "^9.1.6",
+    "@angular/language-service": "^9.1.6",
+    "@ionic/angular-toolkit": "^2.2.0",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.7.1",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "codelyzer": "^5.2.1",
-    "eslint": "^6.8.0",
-    "eslint-plugin-jsdoc": "^21.0.0",
-    "eslint-plugin-prefer-arrow": "^1.1.7",
+    "@types/node": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "codelyzer": "^5.2.2",
+    "eslint": "^7.0.0",
+    "eslint-plugin-jsdoc": "^25.4.0",
+    "eslint-plugin-prefer-arrow": "^1.2.1",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "^5.0.5",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "prettier": "^1.19.1",
-    "protractor": "^5.4.3",
-    "ts-node": "^8.6.2",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "prettier": "^2.0.5",
+    "protractor": "^5.4.4",
+    "ts-node": "^8.10.1",
     "typescript": "^3.7.5"
   },
   "description": "An Ionic project"
