chore: add e2e tests
docker-compose ERPNext backing services
cypress test with ERPNext, backend and frontend

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "cypress": "cypress"
+  },
   "devDependencies": {
+    "cypress": "^4.7.0",
     "lerna": "^3.21.0"
   }
 }
