feat(excel-rma): Add name insted of naming series for customer and supplier

--- a/docker/backing-services/docker-compose-mongo.yml
+++ b/docker/backing-services/docker-compose-mongo.yml
@@ -16,11 +16,11 @@ services:
       - MONGODB_PASSWORD=${DB_PASSWORD}
       - MONGODB_DATABASE=${DB_NAME}
       - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
-      - CACHE_DB=${CACHE_DB}
-      - CACHE_USER=${CACHE_USER}
+      - CACHE_DB=${CACHE_DB_NAME}
+      - CACHE_USER=${CACHE_DB_USER}
       - CACHE_DB_PASSWORD=${CACHE_DB_PASSWORD}
-      - SERVER_DB=${SERVER_DB}
-      - SERVER_USER=${SERVER_USER}
+      - SERVER_DB=${SERVER_DB_NAME}
+      - SERVER_USER=${SERVER_DB_USER}
       - SERVER_DB_PASSWORD=${SERVER_DB_PASSWORD}
     ports:
       - "27017:27017"
