--- a/packages/rma-warranty/Dockerfile
+++ b/packages/rma-warranty/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:latest
 # Copy and build server
-COPY . /home/craft/rma-frontend
+COPY . /home/craft/rma-warranty
 WORKDIR /home/craft/
-RUN cd rma-frontend \
+RUN cd rma-warranty \
     && npm install \
     && npm run build -- --prod
 
 FROM nginx:latest
 
-COPY --from=0 /home/craft/rma-frontend/www /var/www/html
+COPY --from=0 /home/craft/rma-warranty/www /var/www/html
 COPY ./docker/nginx-default.conf.template /etc/nginx/conf.d/default.conf.template
 COPY ./docker/docker-entrypoint.sh /
 
