--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "cypress": "^4.7.0",
-    "lerna": "^3.21.0"
+    "lerna": "^3.21.0",
+    "protractor": "^7.0.0"
   }
 }
