fix: setup mongodb env vars

--- a/docker/backing-services/docker-compose-mongo.yml
+++ b/docker/backing-services/docker-compose-mongo.yml
@@ -16,6 +16,7 @@ services:
       - MONGODB_PASSWORD=${DB_PASSWORD}
       - MONGODB_DATABASE=${DB_NAME}
       - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
+      - MONGODB_PRIMARY_ROOT_USER=root
       - CACHE_DB=${CACHE_DB_NAME}
       - CACHE_USER=${CACHE_DB_USER}
       - CACHE_DB_PASSWORD=${CACHE_DB_PASSWORD}
