--- a/packages/rma-server/package.json
+++ b/packages/rma-server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^7.0.11",
     "@nestjs/core": "^7.0.11",
     "@nestjs/cqrs": "^6.1.0",
+    "pdfkit": "^0.9.0",
     "@nestjs/microservices": "^7.0.11",
     "@nestjs/platform-express": "^7.0.11",
     "@nestjs/swagger": "^4.5.5",
