--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "cypress": "cypress"
+    "cypress": "cypress",
+    "version": "lerna clean --yes && lerna bootstrap --ignore-scripts -- --package-lock-only --no-audit && git add packages/*/package-lock.json"
   },
   "devDependencies": {
-    "cypress": "^4.7.0",
-    "lerna": "^3.21.0"
+    "cypress": "^6.2.1",
+    "lerna": "^3.22.1"
   }
 }
