--- a/packages/rma-mobile/package.json
+++ b/packages/rma-mobile/package.json
@@ -15,71 +15,71 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "^11.0.9",
     "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@ionic-native/browser-tab": "^5.18.0",
-    "@ionic-native/core": "^5.18.0",
-    "@ionic-native/http": "^5.18.0",
-    "@ionic-native/in-app-browser": "^5.18.0",
-    "@ionic-native/splash-screen": "^5.18.0",
-    "@ionic-native/status-bar": "^5.18.0",
-    "@ionic/angular": "^4.11.7",
-    "cordova-android": "^8.1.0",
-    "cordova-plugin-advanced-http": "^2.3.1",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "@ionic-native/browser-tab": "^5.30.0",
+    "@ionic-native/core": "^5.30.0",
+    "@ionic-native/http": "^5.30.0",
+    "@ionic-native/in-app-browser": "^5.30.0",
+    "@ionic-native/splash-screen": "^5.30.0",
+    "@ionic-native/status-bar": "^5.30.0",
+    "@ionic/angular": "^5.5.2",
+    "cordova-android": "^9.0.0",
+    "cordova-plugin-advanced-http": "^3.1.0",
     "cordova-plugin-browsertab": "^0.2.0",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-customurlscheme": "^5.0.0",
+    "cordova-plugin-customurlscheme": "^5.0.2",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-inappbrowser": "^3.1.0",
-    "core-js": "^2.5.4",
-    "ionic-native-http-connection-backend": "^6.1.1",
-    "rxjs": "^6.5.3",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.10.2"
+    "cordova-plugin-inappbrowser": "^4.1.0",
+    "core-js": "^3.8.3",
+    "ionic-native-http-connection-backend": "^8.0.0",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.20",
-    "@angular-devkit/build-angular": "^0.803.20",
-    "@angular-devkit/core": "^8.3.20",
-    "@angular-devkit/schematics": "^8.3.20",
-    "@angular/cli": "^8.3.20",
-    "@angular/compiler": "^8.2.14",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@ionic/angular-toolkit": "^2.1.1",
-    "@types/jasmine": "^3.5.0",
+    "@angular-devkit/architect": "^0.1100.7",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular-devkit/core": "^11.0.7",
+    "@angular-devkit/schematics": "^11.0.7",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler": "^11.0.9",
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/language-service": "^11.0.9",
+    "@ionic/angular-toolkit": "^3.0.0",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.17",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "codelyzer": "^5.2.0",
+    "@types/node": "^14.14.21",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "codelyzer": "^6.0.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "eslint": "^6.8.0",
-    "eslint-plugin-jsdoc": "^21.0.0",
-    "eslint-plugin-prefer-arrow": "^1.1.7",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "eslint": "^7.18.0",
+    "eslint-plugin-jsdoc": "^31.0.7",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "prettier": "^1.19.1",
-    "protractor": "^5.4.2",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.4.5"
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "prettier": "^2.2.1",
+    "protractor": "^7.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "~4.0.5"
   },
-  "description": "Mobile app for Excel RMA",
+  "description": "Mobile app for restricted on the go operations",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
