--- a/packages/rma-server/package.json
+++ b/packages/rma-server/package.json
@@ -52,6 +52,7 @@
     "@types/agenda": "^3.0.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/mongodb": "^3.5.16",
     "@types/node": "^14.14.21",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
