--- a/packages/rma-server/package.json
+++ b/packages/rma-server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "author": "",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
