ci: fix rma-frontend deploy stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -172,7 +172,7 @@ deploy_staging_frontend:
   stage: deploy
   only:
     refs:
-      - master
+      - develop
     changes:
       - packages/rma-frontend/**/*
   before_script:
