feat(rma-frontend): logout from erp on logout from custom app

--- a/packages/rma-frontend/angular.json
+++ b/packages/rma-frontend/angular.json
@@ -46,7 +46,11 @@
               }
             ],
             "scripts": [],
-            "aot": false
+            "aot": false,
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "hammerjs"
+            ]
           },
           "configurations": {
             "production": {
