feat(rma-warranty): logout from erp on logout from custom app

--- a/packages/rma-warranty/angular.json
+++ b/packages/rma-warranty/angular.json
@@ -46,7 +46,10 @@
               }
             ],
             "scripts": [],
-            "aot": false
+            "aot": false,
+            "allowedCommonJsDependencies": [
+              "lodash"
+            ]
           },
           "configurations": {
             "production": {
