ci: pack rma-pos

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -167,6 +167,21 @@ pack_rma_warranty_staging:
     - docker tag rma-warranty $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-warranty:latest
     - docker push $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-warranty:latest
 
+pack_rma_pos_staging:
+  image: docker
+  stage: pack
+  only:
+    refs:
+      - develop
+    changes:
+      - packages/rma-pos/**/*
+  before_script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+  script:
+    - docker build --cache-from $CI_REGISTRY_IMAGE:latest -t rma-pos packages/rma-pos
+    - docker tag rma-pos $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-pos:latest
+    - docker push $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-pos:latest
+
 deploy_staging_frontend:
   image: alpine:latest
   stage: deploy
@@ -253,3 +268,19 @@ pack_rma_warranty_prod:
     - export VERSION=$(git tag --list "rma-warranty@*" --sort=-version:refname | sed -n 1p | sed -e 's#.*@\(\)#\1#')
     - docker build -t $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-warranty:$VERSION packages/rma-warranty
     - docker push $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-warranty:$VERSION
+
+pack_rma_pos_prod:
+  image: docker
+  stage: pack
+  only:
+    refs:
+      - master
+    changes:
+      - packages/rma-pos/**/*
+  before_script:
+    - apk add git
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+  script:
+    - export VERSION=$(git tag --list "rma-pos@*" --sort=-version:refname | sed -n 1p | sed -e 's#.*@\(\)#\1#')
+    - docker build -t $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-pos:$VERSION packages/rma-pos
+    - docker push $CI_REGISTRY/$CI_PROJECT_NAMESPACE/excel-rma/rma-pos:$VERSION
